--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:bind="http://schemas.android.com/tools">
+    android:id="@+id/layout">
 
     <data>
+
         <variable
             name="MainActivityViewModel"
             type="com.example.androidmvvmpoc.viewmodels.MainActivityViewModel" />
@@ -19,21 +21,38 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
+            android:layout_marginStart="162dp"
+            android:layout_marginLeft="162dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="@string/button"
+            android:layout_marginEnd="162dp"
+            android:layout_marginRight="162dp"
             android:onClick="@{()->MainActivityViewModel.onButtonClicked()}"
-            bind:toastMessage="@{MainActivityViewModel.toastMessage}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.046" />
+            bind:toastMessage="@{MainActivityViewModel.toastMessage}"
+            tools:layout_editor_absoluteX="161dp"
+            tools:layout_editor_absoluteY="39dp" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="99dp"
+            android:layout_marginLeft="99dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="99dp"
+            android:layout_marginRight="99dp"
+            android:layout_marginBottom="622dp"
+            android:afterTextChanged="@{(editable)->MainActivityViewModel.onAfterTextChanged(editable)}"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            bind:toastMessage="@{MainActivityViewModel.toastMessage}" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
